--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
 
 /* Formatting */
 
+.width_100{
+  width: 100%;
+}
+
 .left {
   float: left;
 }
@@ -41,13 +45,12 @@
 .container_top_header {
   position: fixed;
   top: 0;
-  width: 100%;
   height: 80px;
   background-color: grey;
   z-index: 1;
 }
 .nav_menu {
-  width: 70%;
+  width: 75%;
   height: 80px;
   margin: 0 auto;
   background-color: green;
@@ -57,13 +60,13 @@
   display: table;
   clear: both;
 }
-.logo_menu,
-.menu_center,
-.menu_right {
-  width: 80px;
-  height: 80px;
-  background-color: blue;
-}
 .menu_center{
   margin-left: 200px;
+}
+
+/* bottom header */
+
+.container_bottom_header{
+  margin-top: 80px;
+  background-image: url("https://www.digitalocean.com/assets/media/homepage/bg-home-1-d54581d7.jpg");
 }
