--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,9 @@ li{
 .margin_bottom10 {
   margin-bottom: 10px;
 }
+.margin_bottom15 {
+  margin-bottom: 15px;
+}
 .margin_bottom30 {
   margin-bottom: 30px;
 }
