--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -474,7 +474,6 @@ h4.logos_title {
 }
 
 .bubble_container{
-  position: relative;
   height: 65px;
   width: 350px;
   background-color: white;
@@ -487,7 +486,6 @@ h4.logos_title {
   width: 90%;
 }
 .bubble_container > i {
-  position: absolute;
   left: 100%;
   bottom: 10%;
   font-size: 25px;
@@ -495,12 +493,10 @@ h4.logos_title {
 }
 
 .shark_image {
-  position: relative;
   width: 100px;
   height: 65px;
 }
 .shark_image .image_container{
-  position: absolute;
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
@@ -511,4 +507,16 @@ h4.logos_title {
 }
 .shark_image img{
   width: 100%;
+}
+
+@media screen and (max-width: 970px) {
+  .shark_bubble {
+    position: absolute;
+    top: 110%;
+    left: 20px;
+  }
+  .shark_container{
+    left: 10px;
+    bottom: 100px
+  }
 }
