--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -502,7 +502,7 @@ h4.logos_title {
   transform: translateX(-50%);
   width: 65px;
   border-radius: 10px;
-  background-color: blue;
+  background-color: #006AFF;
   padding: 5px 0;
 }
 .shark_image img{
