--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,7 @@ h4.logos_title {
 .footer_social i:hover{
   color: white;
 }
-.footer_link ul{
+ul.footer_link{
   padding-left: 0;
 }
 .footer_link li{
